<?xml version="1.0"?>
<package>
  <name>turtlebot_walker</name>
  <version>0.0.0</version>
  <description>Patrick Nolans turtlebot_walker package for ENPM808X</description>

  <maintainer email="patnolan33@gmail.com">Patrick Nolan</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/patnolan33/turtlebot_walker</url>
  <author email="patnolan33@gmail.com">Patrick Nolan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
